# ai-review-cicd-actions

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.md  ai-code-review-requirements.md  debug_similarity.py  export_github_pr_reviews.py  justfile  main.py  pyproject.toml  pytest.ini  requirements.txt  test_deduplication.py  test_problematic_code.py
.claude/: CLAUDE.md  settings.local.json
.github/: ai-review-config.yml
.github/workflows/: ai-code-review.yml  reusable-ai-review.yml
ai_review/: ai_review.py  cli.py  config_manager.py  github_reporter.py  models.py  resources.py
ai_review/analyzers/: java_analyzer.py  javascript_analyzer.py  python_analyzer.py
ai_review/platform/: __init__.py  github_platform.py  gitlab_platform.py
ai_review/prompts/: architecture-review.md  performance-review.md  testing-review.md
config/: default-config.yml
docs/: AI_CONFIGURATION.md  ARCHITECTURE.md  CLAUDE_CODE_SETUP.md  GITHUB.md  GITLAB.md  JAVASCRIPT_INTEGRATION.md  JAVA_INTEGRATION.md  PYTHON_INTEGRATION.md
examples/: README.md  company-policies.yml  java-workflow-example.yml  project-config.yml  usage-in-project.yml
examples/local-pattern/: java-config.yml  java-workflow.yml  python-config.yml  python-workflow.yml
examples/reusable-pattern/: config-example.yml  java-workflow.yml  python-workflow.yml
lib/: __init__.py  ai_deduplication.py  ai_review.py  comment_deduplication.py  comment_generator.py  config_manager.py  github_reporter.py  injection.py  models.py  orchestrator.py  pr_context.py
lib/analyzers/: __init__.py  base_analyzer.py  java_analyzer.py  javascript_analyzer.py  python_analyzer.py
lib/platform/: __init__.py  base.py  factory.py  github_platform.py  gitlab_platform.py
prompts/: base-review.md  security-review.md
self/: README.md  config.yml  workflow.yml
tests/: __init__.py  test_config_manager.py  test_models.py
