[project]
name = "ai-review-cicd-actions"
version = "1.0.0"
description = "Multi-layered code review pipeline demonstrating defense patterns for AI-assisted development"
authors = [
    { name = "Tamás Bódis", email = "tamas.bodis@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["code-review", "ai", "static-analysis", "github-actions", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.17.0",
    "requests>=2.28.0",
    "pygithub>=2.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "anthropic>=0.39.0",
    "python-gitlab>=7.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    # Python analyzers
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "bandit>=1.7.5",
    "mypy>=1.7.0",
    # Pre-commit
    "pre-commit>=3.5.0",
    # Type stubs
    "types-pyyaml",
    "types-requests",
    "types-jsonschema",
]

[project.scripts]
ai-review = "main:main"

[project.urls]
Homepage = "https://github.com/your-org/ai-review-cicd-actions"
Documentation = "https://github.com/your-org/ai-review-cicd-actions/tree/main/docs"
Repository = "https://github.com/your-org/ai-review-cicd-actions"
Issues = "https://github.com/your-org/ai-review-cicd-actions/issues"

# Build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["lib", "prompts", "config"]

[tool.hatch.build.targets.sdist]
include = [
    "/lib",
    "/prompts",
    "/config",
    "/main.py",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Dependency groups (PEP 735)
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "bandit>=1.7.5",
    "mypy>=1.7.0",
    "pre-commit>=4.4.0",
    "types-pyyaml",
    "types-requests",
    "types-jsonschema",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]  # Allow assert in tests

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]

markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["github", "github.*", "gitlab", "gitlab.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.main]
max-line-length = 100
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "pr"]

[tool.pylint.design]
max-args = 7
max-locals = 15
max-branches = 12
max-statements = 50

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "missing-module-docstring",
    "line-too-long",  # Handled by Ruff
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["/tests"]
skips = [
    "B101",  # Skip assert warnings in tests
    "B603",  # subprocess without shell - expected for running analysis tools
    "B607",  # partial executable path - expected for system tools
    "B404",  # subprocess import - necessary for code analysis tool
    "B405",  # xml.etree import - used to parse trusted tool outputs
]

# Coverage configuration
[tool.coverage.run]
source = ["lib"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
